docs/api/qiskit/0.33/qiskit.circuit.BreakLoopOp.mdx
---
title: BreakLoopOp (v0.33)
description: API reference for qiskit.circuit.BreakLoopOp in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.BreakLoopOp
---

# BreakLoopOp

<Class id="qiskit.circuit.BreakLoopOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/controlflow/break_loop.py" signature="BreakLoopOp(num_qubits, num_clbits, label=None)" modifiers="class">
  Bases: `qiskit.circuit.instruction.Instruction`

  A circuit operation which, when encountered, jumps to the end of the nearest enclosing loop.

  **Circuit symbol:**

  ```python
       ┌──────────────┐
  q_0: ┤0             ├
       │              │
  q_1: ┤1             ├
       │  break_loop  │
  q_2: ┤2             ├
       │              │
  c_0: ╡0             ╞
       └──────────────┘
  ```

  Create a new instruction.

  **Parameters**

  *   **name** (*str*) – instruction name
  *   **num\_qubits** (*int*) – instruction’s qubit width
  *   **num\_clbits** (*int*) – instruction’s clbit width
  *   **params** (*list\[int|float|complex|str|ndarray|list|ParameterExpression]*) – list of parameters
  *   **duration** (*int or float*) – instruction’s duration. it must be integer if `unit` is ‘dt’
  *   **unit** (*str*) – time unit of duration
  *   **label** (*str or None*) – An optional label for identifying the instruction.

  **Raises**

  **CircuitError** – when the register is not in the correct format.

  ## Methods

  <span id="qiskit-circuit-breakloopop-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.BreakLoopOp.add_decomposition" signature="BreakLoopOp.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-circuit-breakloopop-assemble" />

  ### assemble

  <Function id="qiskit.circuit.BreakLoopOp.assemble" signature="BreakLoopOp.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-circuit-breakloopop-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.BreakLoopOp.broadcast_arguments" signature="BreakLoopOp.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-circuit-breakloopop-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.BreakLoopOp.c_if" signature="BreakLoopOp.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-circuit-breakloopop-copy" />

  ### copy

  <Function id="qiskit.circuit.BreakLoopOp.copy" signature="BreakLoopOp.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-breakloopop-inverse" />

  ### inverse

  <Function id="qiskit.circuit.BreakLoopOp.inverse" signature="BreakLoopOp.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="qiskit-circuit-breakloopop-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.BreakLoopOp.is_parameterized" signature="BreakLoopOp.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-circuit-breakloopop-mirror" />

  ### mirror

  <Function id="qiskit.circuit.BreakLoopOp.mirror" signature="BreakLoopOp.mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-breakloopop-qasm" />

  ### qasm

  <Function id="qiskit.circuit.BreakLoopOp.qasm" signature="BreakLoopOp.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-circuit-breakloopop-repeat" />

  ### repeat

  <Function id="qiskit.circuit.BreakLoopOp.repeat" signature="BreakLoopOp.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-circuit-breakloopop-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.circuit.BreakLoopOp.reverse_ops" signature="BreakLoopOp.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-breakloopop-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.circuit.BreakLoopOp.soft_compare" signature="BreakLoopOp.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-circuit-breakloopop-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.circuit.BreakLoopOp.validate_parameter" signature="BreakLoopOp.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.BreakLoopOp.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.BreakLoopOp.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.BreakLoopOp.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.BreakLoopOp.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.BreakLoopOp.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.BreakLoopOp.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.BreakLoopOp.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

